--- a/asset/style.scss
+++ b/asset/style.scss
@@ -176,8 +176,12 @@ blockquote {
 
 code {
   color: hsl(200, 20%, 40%);
-  font: normal 15px $mono;
+  font-family: $mono;
   white-space: pre;
+}
+
+p code {
+  font-size: 15px;
 }
 
 a code {
